[gd_scene load_steps=7 format=3 uid="uid://fsoyqigex54a"]

[ext_resource type="Script" path="res://scenes/ad_bar.gd" id="1_ci05l"]
[ext_resource type="Theme" uid="uid://bj5ti8cjyws43" path="res://assets/themes/Ui_theme.tres" id="2_b320b"]
[ext_resource type="Texture2D" uid="uid://cxqiwrwbw05ee" path="res://assets/art/resources/crystaline_bolts.png" id="3_gxjrw"]
[ext_resource type="FontFile" uid="uid://24xaofaf2ipf" path="res://assets/font/elements-starship-typeface-WPY95T-2017-11-01/StarshipGrunge.ttf" id="4_gn262"]

[sub_resource type="FontVariation" id="FontVariation_3l2wb"]
base_font = ExtResource("4_gn262")
spacing_glyph = 1
spacing_top = 10

[sub_resource type="FontVariation" id="FontVariation_ltivv"]
base_font = ExtResource("4_gn262")
spacing_glyph = 1

[node name="ProductBar" type="Panel"]
self_modulate = Color(0.597181, 0.00269571, 0.860414, 0.698039)
custom_minimum_size = Vector2(0, 222.08)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ci05l")

[node name="Panel" type="HBoxContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 0.146
offset_bottom = -0.320038

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel"]
layout_mode = 2
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer4"]
custom_minimum_size = Vector2(280, 280)
layout_mode = 2
texture = ExtResource("3_gxjrw")
expand_mode = 2
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_fonts/font = SubResource("FontVariation_3l2wb")
theme_override_font_sizes/font_size = 50
text = "Get Free Crystaline Bolts"
autowrap_mode = 2

[node name="Description" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_fonts/font = SubResource("FontVariation_ltivv")
theme_override_font_sizes/font_size = 36
text = "Watch an ad to get 5 crystaline bolts!"
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Button" type="Button" parent="Panel/MarginContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_b320b")
theme_override_fonts/font = ExtResource("4_gn262")
theme_override_font_sizes/font_size = 95
text = " Watch "

[node name="AppearanceTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Panel/MarginContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="AppearanceTimer" to="." method="_on_appearance_timer_timeout"]
